improvise, adapt, overcome

--- a/content/acronyms.tex
+++ b/content/acronyms.tex
@@ -21,6 +21,7 @@
 \newglossaryentry{HATEOAS}{name=HATEOAS,description={Hypermedia as the engine ot application state}}
 \newglossaryentry{HTML}{name=HTML,description={Hypertext Markup Language}}
 \newglossaryentry{HTTP}{name=HTTP,description={Hypertext Transfer Protocol}}
+\newglossaryentry{IBM}{name=IBM,description={International Business Machine}}
 \newglossaryentry{IDL}{name=IDL,description={Interface Description Language}}
 \newglossaryentry{IS}{name=IS,description={Informačn\'{\i} systém}}
 \newglossaryentry{Java EE}{name=Java EE,description={Java Platform, Enterprise Edition}}
