--- a/content/chapter-01-uvod.tex
+++ b/content/chapter-01-uvod.tex
@@ -9,19 +9,17 @@ Do styku s nimi přicházíme jak při výkonu našich povolání, tak ve volné
 kde mimo jiné významně usnadňují přístup ke studijním materiálům, přes zdravotnictví,
 kde pomáhají zvyšovat efektivitu a úroveň péče o pacienty~\cite{fichman2011editorial}, až po
 sociální sítě, kde umožňují lidem globálně komunikovat a sdílet své myšlenky, pocity a zážitky.
-Jako budoucí profesionálové v oblasti informačních technologií máme za úkol nejen
-rozvíjet a vylepšovat funkcionalitu informačních systému, ale také zkoumat možnosti, kterými
-bychom mohli tento proces zjednodušit a zefektivnit. Díky tomu budeme moci dostát stále
-rostoucímu množství požadavků na tyto systémy.
+Jedním z úkolů výzkumu v oblasti softwarového inženýrství je zjednodušení a zefektivnění proces
+vývoje informačních systémů. Díky tomu budou tyto systémy moci splňovat stále rostoucí množství požadavků.
 
 \goal{SOA}
 Náročnost vývoje některých informačních systémů překračuje možnosti jednotlivců, ale
 i celých týmů či skupin. Tyto systémy často využívají větší počet různorodých technologií kvůli
-širokému spektru funkcionality, kterou nabízejí. Jedním z přístupů, který se tyto problémy snaží řešit,
+širokému spektru funkcionality, kterou nabízejí. Jedním z přístupů, který tyto problémy řeší,
 je použití architektury orientované na služby. Ta se zaměřuje na sestavení systému z menších, vzájemně
-nezávislých celků, tzv. služeb. Každá služba pak zastřešuje pouze část funkcionality systému a kooperuje
-s ostatními službami pomocí komunikačních protokolů. Tím je umožněno využívat teoreticky neomezené množství
-technologií a rozdělit práci na systému mezi více nezávislých vývojářských týmu.
+nezávislých celků, tzv. služeb. Každá služba pak zastřešuje pouze část funkcionality systému.
+Tím je umožněno využívat teoreticky neomezené množství technologií a rozdělit práci na systému mezi více nezávislých
+vývojářských týmu.
 
 \goal{Byznysová pravidla}
 Tato architektura bohužel nepřináší odpověď na všechny problémy, které je potřeba v informačních
@@ -36,8 +34,8 @@ Cílem této práce je prozkoumat myšlenku inovativního přístupu k centráln
 distribuci byznysových pravidel v systémech využívajících architekturu orientovanou na služby
 a navrhnout framework, který by umožnil tento přístup uplatnit v praxi.
 Tento koncept by měl díky využití aspektově orientovaného programování usnadnit práci vývojářů
-a doménových expertů. Díky tomu by mohl přinést snížení nákladů na vývoj a údržbu takových systémů
-a tím umožnit vývoj kvalitnějších a rozsáhlejších systémů.
+a doménových expertů. Díky tomu by mohl přinést snížení nákladů na vývoj a údržbu informačních systémů
+a tím zvýšit jejich kvalitu a snížit náklady na jejich vývoj.
 
 \goal{Popis struktury DP a obsah kapitol}
 Kapitola~\ref{ch:analyza} se věnuje detailn\'{\i} anal\'yze problematiky bynysov\'ych pravidel a
