--- a/reference.bib
+++ b/reference.bib
@@ -560,62 +560,149 @@
 }
 
 @article{fichman2011editorial,
-    title={Editorial overview—the role of information systems in healthcare: current research and future trends},
-    author={Fichman, Robert G and Kohli, Rajiv and Krishnan, Ranjani},
-    journal={Information Systems Research},
-    volume={22},
-    number={3},
-    pages={419--428},
-    year={2011},
-    publisher={INFORMS}
+    title = {Editorial overview—the role of information systems in healthcare: current research and future trends},
+    author = {Fichman, Robert G and Kohli, Rajiv and Krishnan, Ranjani},
+    journal = {Information Systems Research},
+    volume = {22},
+    number = {3},
+    pages = {419--428},
+    year = {2011},
+    publisher = {INFORMS}
 }
 
 @incollection{czarnecki2000generative,
-    title={Generative programming and active libraries},
-    author={Czarnecki, Krzysztof and Eisenecker, Ulrich and Gl{\"u}ck, Robert and Vandevoorde, David and Veldhuizen, Todd},
-    booktitle={Generic Programming},
-    pages={25--39},
-    year={2000},
-    publisher={Springer},
+    title = {Generative programming and active libraries},
+    author = {Czarnecki, Krzysztof and Eisenecker, Ulrich and Gl { \"u } ck, Robert and Vandevoorde, David and Veldhuizen, Todd},
+    booktitle = {Generic Programming},
+    pages = {25--39},
+    year = {2000},
+    publisher = {Springer},
     address = {Cham, Switzerland},
 }
 
 @misc{andrews2003business,
-    title={Business process execution language for web services},
-    author={Andrews, Tony and Curbera, Francisco and Dholakia, Hitesh and Goland, Yaron and Klein, Johannes and Leymann, Frank and Liu, Kevin and Roller, Dieter and Smith, Doug and Thatte, Satish and others},
-    year={2003},
-    publisher={version}
+    title = {Business process execution language for web services},
+    author = {Andrews, Tony and Curbera, Francisco and Dholakia, Hitesh and Goland, Yaron and Klein, Johannes and Leymann, Frank and Liu, Kevin and Roller, Dieter and Smith, Doug and Thatte, Satish and others},
+    year = {2003},
+    publisher = {version}
 }
 
 @inproceedings{rosenberg2005business,
-    title={Business rules integration in BPEL-a service-oriented approach},
-    author={Rosenberg, Florian and Dustdar, Schahram},
-    booktitle={E-Commerce Technology, 2005. CEC 2005. Seventh IEEE International Conference on},
-    pages={476--479},
-    year={2005},
-    organization={IEEE}
+    title = {Business rules integration in BPEL-a service-oriented approach},
+    author = {Rosenberg, Florian and Dustdar, Schahram},
+    booktitle = {E-Commerce Technology, 2005. CEC 2005. Seventh IEEE International Conference on},
+    pages = {476--479},
+    year = {2005},
+    organization = {IEEE}
 }
 
 @techreport{boyen1994generalized,
-    title={Generalized mixin-based inheritance to support multiple inheritance},
-    author={Boyen, Niels and Lucas, Carine and Steyaert, Patrick},
-    year={1994},
-    institution={Technical Report vub-prog-tr-94-12, Vrije Universiteit Brussel}
+    title = {Generalized mixin-based inheritance to support multiple inheritance},
+    author = {Boyen, Niels and Lucas, Carine and Steyaert, Patrick},
+    year = {1994},
+    institution = {Technical Report vub-prog-tr-94-12, Vrije Universiteit Brussel}
 }
 
 @article{model2011notation,
-    title={Notation (bpmn) version 2.0},
-    author={Model, Business Process},
-    journal={OMG Specification, Object Management Group},
-    pages={22--31},
-    year={2011}
+    title = {Notation (bpmn) version 2.0},
+    author = {Model, Business Process},
+    journal = {OMG Specification, Object Management Group},
+    pages = {22--31},
+    year = {2011}
 }
 
 @inproceedings{rao2004survey,
-    title={A survey of automated web service composition methods},
-    author={Rao, Jinghai and Su, Xiaomeng},
-    booktitle={International Workshop on Semantic Web Services and Web Process Composition},
-    pages={43--54},
-    year={2004},
+    title = {A survey of automated web service composition methods},
+    author = {Rao, Jinghai and Su, Xiaomeng},
+    booktitle = {International Workshop on Semantic Web Services and Web Process Composition},
+    pages = {43--54},
+    year = {2004},
+    organization = {Springer}
+}
+
+@inproceedings{sheard2001accomplishments,
+    title = {Accomplishments and research challenges in meta-programming},
+    author = {Sheard, Tim},
+    booktitle = {International Workshop on Semantics, Applications, and Implementation of Program Generation},
+    pages = {2--44},
+    year = {2001},
+    publisher = {Springer Berlin Heidelberg},
+    address = {Berlin, Heidelberg},
+}
+
+@inproceedings{visser2002meta,
+    title = {Meta-programming with concrete object syntax},
+    author = {Visser, Eelco},
+    booktitle = {International Conference on Generative Programming and Component Engineering},
+    pages = {299--315},
+    year = {2002},
+    organization = {Springer}
+}
+
+@misc{kleppe2003model,
+    title = {The model driven architecture: practice and promise},
+    author = {Kleppe, Anneke G and Warmer, Jos and Bast, Wim and Explained, MDA},
+    year = {2003},
+    publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+    address = {Boston, MA},
+}
+
+@book{vandevoorde2002c++,
+    title = {C++ Templates},
+    author = {Vandevoorde, David and Josuttis, Nicolai M},
+    year = {2002},
+    publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+    address = {Boston, Massachusetts, USA},
+}
+
+@article{forman2004java,
+    title = {Java reflection in action},
+    author = {Forman, Ira R and Forman, Nate and Ibm, John Vlissides},
+    year = {2004},
+    publisher = {Citeseer},
+    address = {Pennsylvania, USA},
+}
+
+@online{oraclebpel,
+    key = {A Hands-on Introduction to BPEL},
+    title = {A Hands-on Introduction to BPEL},
+    url = {http://www.oracle.com/technetwork/articles/matjaz-bpel1-090575.html},
+    urldate = {2018-05-04},
+}
+
+@inproceedings{bakshi2017microservices,
+    title={Microservices-based software architecture and approaches},
+    author={Bakshi, Kapil},
+    booktitle={Aerospace Conference, 2017 IEEE},
+    pages={1--8},
+    year={2017},
+    organization={IEEE}
+}
+
+@incollection{boyer2011ibm,
+    title={IBM websphere ilog jrules},
+    author={Boyer, Mr J{\'e}r{\^o}me and Mili, Hafedh},
+    booktitle={Agile business rule development},
+    pages={215--242},
+    year={2011},
+    publisher={Springer},
+    address = {Cham, Switzerland},
+}
+
+@inproceedings{cerny2016survey,
+    title={Survey on concern separation in service integration},
+    author={Cerny, Tomas and Donahoo, Michael J},
+    booktitle={International Conference on Current Trends in Theory and Practice of Informatics},
+    pages={518--531},
+    year={2016},
     organization={Springer}
+}
+
+@inproceedings{papazoglou2003service,
+    title={Service-oriented computing: Concepts, characteristics and directions},
+    author={Papazoglou, Mike P},
+    booktitle={Web Information Systems Engineering, 2003. WISE 2003. Proceedings of the Fourth International Conference on},
+    pages={3--12},
+    year={2003},
+    organization={IEEE}
 }
